AS version, June 23

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -655,3 +655,453 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Gar++15,
+   author = {{Gargiulo}, A. and {Saracco}, P. and {Longhetti}, M. and {Tamburri}, S. and 
+    {Lonoce}, I. and {Ciocca}, F.},
+    title = "{Lower mass normalization of the stellar initial mass function for dense massive early-type galaxies at z \~{} 1.4}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1410.5229},
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: formation, galaxies: high-redshift, galaxies: stellar content},
+     year = 2015,
+    month = jan,
+   volume = 573,
+      eid = {A110},
+    pages = {A110},
+      doi = {10.1051/0004-6361/201424235},
+   adsurl = {http://adsabs.harvard.edu/abs/2015A%26A...573A.110G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{S+C14,
+   author = {{Shetty}, S. and {Cappellari}, M.},
+    title = "{Salpeter Normalization of the Stellar Initial Mass Function for Massive Galaxies at z \~{} 1}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1402.7354},
+ keywords = {galaxies: evolution, galaxies: formation, galaxies: high-redshift, galaxies: kinematics and dynamics, galaxies: structure},
+     year = 2014,
+    month = may,
+   volume = 786,
+      eid = {L10},
+    pages = {L10},
+      doi = {10.1088/2041-8205/786/2/L10},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...786L..10S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{New++15,
+   author = {{Newman}, A.~B. and {Ellis}, R.~S. and {Treu}, T.},
+    title = "{Luminous and Dark Matter Profiles from Galaxies to Clusters: Bridging the Gap with Group-scale Lenses}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1503.05282},
+ keywords = {dark matter, galaxies: elliptical and lenticular, cD, gravitational lensing: strong},
+     year = 2015,
+    month = nov,
+   volume = 814,
+      eid = {26},
+    pages = {26},
+      doi = {10.1088/0004-637X/814/1/26},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...814...26N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{New++13,
+   author = {{Newman}, A.~B. and {Treu}, T. and {Ellis}, R.~S. and {Sand}, D.~J.
+    },
+    title = "{The Density Profiles of Massive, Relaxed Galaxy Clusters. II. Separating Luminous and Dark Matter in Cluster Cores}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1209.1392},
+ keywords = {dark matter, galaxies: elliptical and lenticular, cD, gravitational lensing: strong, gravitational lensing: weak, stars: kinematics and dynamics},
+     year = 2013,
+    month = mar,
+   volume = 765,
+      eid = {25},
+    pages = {25},
+      doi = {10.1088/0004-637X/765/1/25},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...765...25N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Hop++10,
+   author = {{Hopkins}, P.~F. and {Bundy}, K. and {Hernquist}, L. and {Wuyts}, S. and 
+    {Cox}, T.~J.},
+    title = "{Discriminating between the physical processes that drive spheroid size evolution}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0909.2039},
+ keywords = {galaxies: active, galaxies: evolution, galaxies: formation, quasars: general, cosmology: theory},
+     year = 2010,
+    month = jan,
+   volume = 401,
+    pages = {1099-1117},
+      doi = {10.1111/j.1365-2966.2009.15699.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2010MNRAS.401.1099H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Off15,
+   author = {{Offner}, S.~S.~R.},
+    title = "{An Observational Perspective of the IMF: Progress and Challenges}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1510.06027},
+ primaryClass = "astro-ph.SR",
+ keywords = {Astrophysics - Solar and Stellar Astrophysics},
+     year = 2015,
+    month = oct,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv151006027O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{TRN13,
+   author = {{Tortora}, C. and {Romanowsky}, A.~J. and {Napolitano}, N.~R.
+    },
+    title = "{An Inventory of the Stellar Initial Mass Function in Early-type Galaxies}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1207.4475},
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: general },
+     year = 2013,
+    month = mar,
+   volume = 765,
+      eid = {8},
+    pages = {8},
+      doi = {10.1088/0004-637X/765/1/8},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...765....8T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{SLC15,
+   author = {{Smith}, R.~J. and {Lucey}, J.~R. and {Conroy}, C.},
+    title = "{The SINFONI Nearby Elliptical Lens Locator Survey: discovery of two new low-redshift strong lenses and implications for the initial mass function in giant early-type galaxies}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1503.02661},
+ keywords = {gravitational lensing: strong, stars: luminosity function, mass function, galaxies: elliptical and lenticular, cD, galaxies: stellar content},
+     year = 2015,
+    month = jun,
+   volume = 449,
+    pages = {3441-3457},
+      doi = {10.1093/mnras/stv518},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.449.3441S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Dut++12,
+   author = {{Dutton}, A.~A. and {Mendel}, J.~T. and {Simard}, L.},
+    title = "{Evidence for a non-universal stellar initial mass function in low-redshift high-density early-type galaxies}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1111.2905},
+ keywords = {stars: luminosity function, mass function, galaxies: elliptical and lenticular, cD, galaxies: fundamental parameters, galaxies: kinematics and dynamics, galaxies: structure},
+     year = 2012,
+    month = may,
+   volume = 422,
+    pages = {33-37},
+      doi = {10.1111/j.1745-3933.2012.01230.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.422L..33D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Mar++15,
+   author = {{Mart{\'{\i}}n-Navarro}, I. and {Barbera}, F.~L. and {Vazdekis}, A. and 
+    {Falc{\'o}n-Barroso}, J. and {Ferreras}, I.},
+    title = "{Radial variations in the stellar initial mass function of early-type galaxies}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1404.6533},
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: formation, galaxies: fundamental parameters},
+     year = 2015,
+    month = feb,
+   volume = 447,
+    pages = {1033-1048},
+      doi = {10.1093/mnras/stu2480},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.447.1033M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Gav++07,
+   author = {{Gavazzi}, R. and {Treu}, T. and {Rhodes}, J.~D. and {Koopmans}, L.~V.~E. and 
+    {Bolton}, A.~S. and {Burles}, S. and {Massey}, R.~J. and {Moustakas}, L.~A.
+    },
+    title = "{The Sloan Lens ACS Survey. IV. The Mass Density Profile of Early-Type Galaxies out to 100 Effective Radii}",
+  journal = {\apj},
+   eprint = {astro-ph/0701589},
+ keywords = {Cosmology: Dark Matter, Galaxies: Elliptical and Lenticular, cD, Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 2007,
+    month = sep,
+   volume = 667,
+    pages = {176-190},
+      doi = {10.1086/519237},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...667..176G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Nag++05,
+   author = {{Nagashima}, M. and {Lacey}, C.~G. and {Okamoto}, T. and {Baugh}, C.~M. and 
+    {Frenk}, C.~S. and {Cole}, S.},
+    title = "{The metal enrichment of elliptical galaxies in hierarchical galaxy formation models}",
+  journal = {\mnras},
+   eprint = {astro-ph/0504618},
+ keywords = {stars: luminosity function, mass function, galaxies: clusters: general, galaxies: formation, large-scale structure of Universe},
+     year = 2005,
+    month = oct,
+   volume = 363,
+    pages = {L31-L35},
+      doi = {10.1111/j.1745-3933.2005.00078.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2005MNRAS.363L..31N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bek13,
+   author = {{Bekki}, K.},
+    title = "{Simulating galaxy evolution with a non-universal stellar initial mass function}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1309.3878},
+ keywords = {stars: formation, galaxies: evolution, galaxies: formation, galaxies: ISM},
+     year = 2013,
+    month = dec,
+   volume = 436,
+    pages = {2254-2275},
+      doi = {10.1093/mnras/stt1735},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.436.2254B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Cha++15,
+   author = {{Chattopadhyay}, T. and {De}, T. and {Warlu}, B. and {Chattopadhyay}, A.~K.
+    },
+    title = "{Cosmic History of the Integrated Galactic Stellar Initial Mass Function: A Simulation Study}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1411.3848},
+ keywords = {galaxies: evolution, stars: evolution, stars: formation},
+     year = 2015,
+    month = jul,
+   volume = 808,
+      eid = {24},
+    pages = {24},
+      doi = {10.1088/0004-637X/808/1/24},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...808...24C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{GargiuloI++15,
+   author = {{Gargiulo}, I.~D. and {Cora}, S.~A. and {Padilla}, N.~D. and 
+    {Mu{\~n}oz Arancibia}, A.~M. and {Ruiz}, A.~N. and {Orsi}, A.~A. and 
+    {Tecce}, T.~E. and {Weidner}, C. and {Bruzual}, G.},
+    title = "{Chemoarchaeological downsizing in a hierarchical universe: impact of a top-heavy IGIMF}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1402.3296},
+ keywords = {methods: numerical, galaxies: abundances, galaxies: formation},
+     year = 2015,
+    month = feb,
+   volume = 446,
+    pages = {3820-3841},
+      doi = {10.1093/mnras/stu2272},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.446.3820G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fon++16,
+   author = {{Fontanot}, F. and {De Lucia}, G. and {Hirschmann}, M. and {Bruzual}, G. and 
+    {Charlot}, S. and {Zibetti}, S.},
+    title = "{Variations of the initial mass function in semi-analytical models: implications for the chemical enrichment of galaxies in the GAEA model}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1606.01908},
+ keywords = {Astrophysics - Astrophysics of Galaxies},
+     year = 2016,
+    month = jun,
+   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160601908F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{LaB++16,
+   author = {{La Barbera}, F. and {Vazdekis}, A. and {Ferreras}, I. and {Pasquali}, A. and 
+    {Cappellari}, M. and {Mart{\'{\i}}n-Navarro}, I. and {Sch{\"o}nebeck}, F. and 
+    {Falc{\'o}n-Barroso}, J.},
+    title = "{Radial constraints on the initial mass function from TiO features and Wing-Ford band in early-type galaxies}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1509.08250},
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: formation, galaxies: fundamental parameters, galaxies: stellar content},
+     year = 2016,
+    month = apr,
+   volume = 457,
+    pages = {1468-1489},
+      doi = {10.1093/mnras/stv2996},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.457.1468L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{MLM16,
+   author = {{McConnell}, N.~J. and {Lu}, J.~R. and {Mann}, A.~W.},
+    title = "{Radial Trends in IMF-sensitive Absorption Features in Two Early-type Galaxies: Evidence for Abundance-driven Gradients}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1506.07880},
+ keywords = {galaxies: abundances, galaxies: elliptical and lenticular, cD, galaxies: star formation, stars: mass function},
+     year = 2016,
+    month = apr,
+   volume = 821,
+      eid = {39},
+    pages = {39},
+      doi = {10.3847/0004-637X/821/1/39},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...821...39M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{vdW++08,
+   author = {{van der Wel}, A. and {Holden}, B.~P. and {Zirm}, A.~W. and 
+    {Franx}, M. and {Rettura}, A. and {Illingworth}, G.~D. and {Ford}, H.~C.
+    },
+    title = "{Recent Structural Evolution of Early-Type Galaxies: Size Growth from z = 1 to z = 0}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0808.0077},
+ keywords = {galaxies: clusters: general, galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: formation, galaxies: fundamental parameters, galaxies: general, galaxies: photometry},
+     year = 2008,
+    month = nov,
+   volume = 688,
+      eid = {48-58},
+    pages = {48-58},
+      doi = {10.1086/592267},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...688...48V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Cap++09,
+   author = {{Cappellari}, M. and {di Serego Alighieri}, S. and {Cimatti}, A. and 
+    {Daddi}, E. and {Renzini}, A. and {Kurk}, J.~D. and {Cassata}, P. and 
+    {Dickinson}, M. and {Franceschini}, A. and {Mignoli}, M. and 
+    {Pozzetti}, L. and {Rodighiero}, G. and {Rosati}, P. and {Zamorani}, G.
+    },
+    title = "{Dynamical Masses of Early-Type Galaxies at z \~{} 2: Are they Truly Superdense?}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {0906.3648},
+ primaryClass = "astro-ph.GA",
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: formation, galaxies: high-redshift},
+     year = 2009,
+    month = oct,
+   volume = 704,
+    pages = {L34-L39},
+      doi = {10.1088/0004-637X/704/1/L34},
+   adsurl = {http://adsabs.harvard.edu/abs/2009ApJ...704L..34C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Ono++12,
+   author = {{Onodera}, M. and {Renzini}, A. and {Carollo}, M. and {Cappellari}, M. and 
+    {Mancini}, C. and {Strazzullo}, V. and {Daddi}, E. and {Arimoto}, N. and 
+    {Gobat}, R. and {Yamada}, Y. and {McCracken}, H.~J. and {Ilbert}, O. and 
+    {Capak}, P. and {Cimatti}, A. and {Giavalisco}, M. and {Koekemoer}, A.~M. and 
+    {Kong}, X. and {Lilly}, S. and {Motohara}, K. and {Ohta}, K. and 
+    {Sanders}, D.~B. and {Scoville}, N. and {Tamura}, N. and {Taniguchi}, Y.
+    },
+    title = "{Deep Near-infrared Spectroscopy of Passively Evolving Galaxies at z $\gt$\~{} 1.4}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1206.1540},
+ keywords = {galaxies: evolution, galaxies: formation, galaxies: high-redshift},
+     year = 2012,
+    month = aug,
+   volume = 755,
+      eid = {26},
+    pages = {26},
+      doi = {10.1088/0004-637X/755/1/26},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...755...26O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{New++10,
+   author = {{Newman}, A.~B. and {Ellis}, R.~S. and {Treu}, T. and {Bundy}, K.
+    },
+    title = "{Keck Spectroscopy of z $\gt$ 1 Field Spheroidals: Dynamical Constraints on the Growth Rate of Red ''Nuggets''}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1004.1331},
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution},
+     year = 2010,
+    month = jul,
+   volume = 717,
+    pages = {L103-L107},
+      doi = {10.1088/2041-8205/717/2/L103},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...717L.103N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bez++13,
+   author = {{Bezanson}, R. and {van Dokkum}, P. and {van de Sande}, J. and 
+    {Franx}, M. and {Kriek}, M.},
+    title = "{Massive and Newly Dead: Discovery of a Significant Population of Galaxies with High-velocity Dispersions and Strong Balmer Lines at z \~{} 1.5 from Deep Keck Spectra and HST/WFC3 Imaging}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1210.7236},
+ keywords = {cosmology: observations, galaxies: evolution, galaxies: formation, galaxies: fundamental parameters},
+     year = 2013,
+    month = feb,
+   volume = 764,
+      eid = {L8},
+    pages = {L8},
+      doi = {10.1088/2041-8205/764/1/L8},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...764L...8B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{vdS++13,
+   author = {{van de Sande}, J. and {Kriek}, M. and {Franx}, M. and {van Dokkum}, P.~G. and 
+    {Bezanson}, R. and {Bouwens}, R.~J. and {Quadri}, R.~F. and 
+    {Rix}, H.-W. and {Skelton}, R.~E.},
+    title = "{Stellar Kinematics of z \~{} 2 Galaxies and the Inside-out Growth of Quiescent Galaxies}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1211.3424},
+ keywords = {cosmology: observations, galaxies: evolution, galaxies: formation},
+     year = 2013,
+    month = jul,
+   volume = 771,
+      eid = {85},
+    pages = {85},
+      doi = {10.1088/0004-637X/771/2/85},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...771...85V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{NFW97,
+   author = {{Navarro}, J.~F. and {Frenk}, C.~S. and {White}, S.~D.~M.},
+    title = "{A Universal Density Profile from Hierarchical Clustering}",
+  journal = {\apj},
+   eprint = {astro-ph/9611107},
+ keywords = {Cosmology: Theory, Cosmology: Dark Matter, Galaxies: Halos, Methods: Numerical},
+     year = 1997,
+    month = dec,
+   volume = 490,
+    pages = {493-508},
+   adsurl = {http://adsabs.harvard.edu/abs/1997ApJ...490..493N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Pos++14,
+   author = {{Posti}, L. and {Nipoti}, C. and {Stiavelli}, M. and {Ciotti}, L.
+    },
+    title = "{The imprint of dark matter haloes on the size and velocity dispersion evolution of early-type galaxies}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1310.2255},
+ keywords = {galaxies: evolution, galaxies: formation, galaxies: haloes, dark matter},
+     year = 2014,
+    month = may,
+   volume = 440,
+    pages = {610-623},
+      doi = {10.1093/mnras/stu301},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.440..610P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
