--- a/paper/references.bib
+++ b/paper/references.bib
@@ -560,21 +560,6 @@ archivePrefix = "arXiv",
 }
 
 
-@ARTICLE{GKH15,
-   author = {{Guszejnov}, D. and {Krumholz}, M.~R. and {Hopkins}, P.~F.},
-    title = "{The Necessity of Feedback Physics in Setting the Peak of the Initial Mass Function}",
-  journal = {ArXiv e-prints},
-archivePrefix = "arXiv",
-   eprint = {1510.05040},
- primaryClass = "astro-ph.SR",
- keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
-     year = 2015,
-    month = oct,
-   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv151005040G},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
 @ARTICLE{Ilb++13,
    author = {{Ilbert}, O. and {McCracken}, H.~J. and {Le F{\`e}vre}, O. and 
 	{Capak}, P. and {Dunlop}, J. and {Karim}, A. and {Renzini}, M.~A. and 
@@ -807,7 +792,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{Mar++15,
-   author = {{Mart{\'{\i}}n-Navarro}, I. and {Barbera}, F.~L. and {Vazdekis}, A. and 
+   author = {{Mart{\'{\i}}n-Navarro}, I. and {La Barbera}, F. and {Vazdekis}, A. and 
     {Falc{\'o}n-Barroso}, J. and {Ferreras}, I.},
     title = "{Radial variations in the stellar initial mass function of early-type galaxies}",
   journal = {\mnras},
@@ -1102,6 +1087,127 @@ archivePrefix = "arXiv",
     pages = {610-623},
       doi = {10.1093/mnras/stu301},
    adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.440..610P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bar++11,
+   author = {{Barnab{\`e}}, M. and {Czoske}, O. and {Koopmans}, L.~V.~E. and 
+    {Treu}, T. and {Bolton}, A.~S.},
+    title = "{Two-dimensional kinematics of SLACS lenses - III. Mass structure and dynamics of early-type lens galaxies beyond z {\sime} 0.1}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1102.2261},
+ keywords = {gravitational lensing: strong, galaxies: elliptical and lenticular, cD, galaxies: kinematics and dynamics, galaxies: structure},
+     year = 2011,
+    month = aug,
+   volume = 415,
+    pages = {2215-2232},
+      doi = {10.1111/j.1365-2966.2011.18842.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2011MNRAS.415.2215B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Sch++15,
+   author = {{Schneider}, M.~D. and {Hogg}, D.~W. and {Marshall}, P.~J. and 
+    {Dawson}, W.~A. and {Meyers}, J. and {Bard}, D.~J. and {Lang}, D.
+    },
+    title = "{Hierarchical Probabilistic Inference of Cosmic Shear}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1411.2608},
+ keywords = {catalogs, cosmology: observations, gravitational lensing: weak, methods: data analysis, methods: statistical, surveys},
+     year = 2015,
+    month = jul,
+   volume = 807,
+      eid = {87},
+    pages = {87},
+      doi = {10.1088/0004-637X/807/1/87},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...807...87S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Sal55,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1955ApJ...121..161S},
+	Author = {{Salpeter}, E.~E.},
+	Doi = {10.1086/145971},
+	Journal = {\apj},
+	Month = jan,
+	Pages = {161-+},
+	Title = {{The Luminosity Function and Stellar Evolution.}},
+	Volume = 121,
+	Year = 1955,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/145971}}
+
+@article{deV48,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1948AnAp...11..247D},
+	Author = {{de Vaucouleurs}, G.},
+	Journal = {Annales d'Astrophysique},
+	Month = jan,
+	Pages = {247},
+	Title = {{Recherches sur les Nebuleuses Extragalactiques}},
+	Volume = 11,
+	Year = 1948}
+
+@BOOK{Ser68, 
+   author = {{Sersic}, J.~L.},
+    title = "{Atlas de galaxias australes}",
+ keywords = {GALAXIES, GROUPS OF GALAXIES, ATLASES},
+booktitle = "{Atlas de galaxias australes}",
+Publisher = {Cordoba, Argentina: Observatorio Astronomico},
+     year = 1968,
+   adsurl = {http://cdsads.u-strasbg.fr/abs/1968adga.book.....S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Tor++14,
+   author = {{Tortora}, C. and {Napolitano}, N.~R. and {Saglia}, R.~P. and 
+    {Romanowsky}, A.~J. and {Covone}, G. and {Capaccioli}, M.},
+    title = "{Evolution of central dark matter of early-type galaxies up to z {\tilde} 0.8}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1409.0859},
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: general},
+     year = 2014,
+    month = nov,
+   volume = 445,
+    pages = {162-174},
+      doi = {10.1093/mnras/stu1712},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.445..162T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{GKH16,
+   author = {{Guszejnov}, D. and {Krumholz}, M.~R. and {Hopkins}, P.~F.},
+    title = "{The necessity of feedback physics in setting the peak of the initial mass function}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1510.05040},
+ primaryClass = "astro-ph.SR",
+ keywords = {turbulence, stars: formation, galaxies: evolution, galaxies: star formation, cosmology: theory},
+     year = 2016,
+    month = may,
+   volume = 458,
+    pages = {673-680},
+      doi = {10.1093/mnras/stw315},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.458..673G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{S+L13,
+   author = {{Smith}, R.~J. and {Lucey}, J.~R.},
+    title = "{A giant elliptical galaxy with a lightweight initial mass function}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1306.4983},
+ keywords = {gravitational lensing: strong, stars: luminosity function, mass function, galaxies: elliptical and lenticular, cD, galaxies: individual: ESO325-G004, galaxies: stellar content},
+     year = 2013,
+    month = sep,
+   volume = 434,
+    pages = {1964-1977},
+      doi = {10.1093/mnras/stt1141},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.434.1964S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
