--- a/paper/table1.tex
+++ b/paper/table1.tex
@@ -1,6 +1,6 @@
-``$M_*$ model'', $z=2$ & (0.33, 0.07, 0.00) & (1.26, -0.09, 0.06) \\
-``$M_*$ model'', $z=1$ & (0.26, 0.00, 0.02) & (1.03, -0.04, 0.06) \\
-``$M_*$ model'', $z=0$ & (0.23, -0.06, 0.02) & (0.75, 0.00, 0.05) \\
-``$\sigma$ model'', $z=2$ & (0.41, -0.04, 0.08) & (2.30, -0.35, 0.00) \\
-``$\sigma$ model'', $z=1$ & (0.32, -0.12, 0.06) & (1.76, -0.24, 0.05) \\
-``$\sigma$ model'', $z=0$ & (0.29, -0.20, 0.04) & (1.20, -0.15, 0.06) \\
+''$M_*$ model'' & (0.26, 0.21, 0.00) & (1.06, 0.06, 0.06)\\
+''$M_*$ model'' & (0.21, 0.13, 0.02) & (1.06, 0.06, 0.04)\\
+''$M_*$ model'' & (0.20, 0.06, 0.02) & (1.08, 0.05, 0.04)\\
+''$\sigma$ model'' & (0.24, 0.19, 0.05) & (1.20, 0.03, 0.00)\\
+''$\sigma$ model'' & (0.19, 0.11, 0.04) & (1.06, 0.05, 0.01)\\
+''$\sigma$ model'' & (0.18, 0.05, 0.03) & (1.02, 0.05, 0.01)\\
